// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::DateFilter snapshot shows a warning for April 2017 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-expanded="true"
    aria-label="Hide Date CFPB received the complaint filter"
    className="o-expandable_header"
    onClick={[Function]}
  >
    <h3
      className="o-expandable_label"
    >
      Date CFPB received the complaint
    </h3>
    <span
      className="o-expandable_cues"
    >
      <span
        aria-label="Hide"
        className="o-expandable_cue-close"
        role="img"
      >
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p />
    <div>
      <p
        className="u-mt15"
      >

        CFPB updated product and issue options in April 2017 and August 2023.

        <a
          aria-label="Learn more about Product and Issue changes (opens in new window)"
          href="https://www.consumerfinance.gov/data-research/consumer-complaints/#past-changes"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn More
        </a>
      </p>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-from"
          >
            From
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="date_received-from"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2016-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received from filter
              </span>
            </button>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-through"
          >
            Through
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="date_received-through"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2018-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received through filter
              </span>
            </button>
          </div>
        </li>
      </ul>
      <section
        className="date-ranges m-btn-group"
      >
        <p>
          Date range (Click to modify range)
        </p>
        <button
          className="a-btn date-selector range-3m"
          onClick={[Function]}
        >
          3m
        </button>
        <button
          className="a-btn date-selector range-6m"
          onClick={[Function]}
        >
          6m
        </button>
        <button
          className="a-btn date-selector range-1y"
          onClick={[Function]}
        >
          1y
        </button>
        <button
          className="a-btn date-selector range-3y"
          onClick={[Function]}
        >
          3y
        </button>
        <button
          className="a-btn date-selector range-all"
          onClick={[Function]}
        >
          All
        </button>
      </section>
    </div>
  </div>
</section>
`;

exports[`component::DateFilter snapshot shows errors 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-expanded="true"
    aria-label="Hide Date CFPB received the complaint filter"
    className="o-expandable_header"
    onClick={[Function]}
  >
    <h3
      className="o-expandable_label"
    >
      Date CFPB received the complaint
    </h3>
    <span
      className="o-expandable_cues"
    >
      <span
        aria-label="Hide"
        className="o-expandable_cue-close"
        role="img"
      >
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p />
    <div>
      <p
        className="u-mt15"
      >

        CFPB updated product and issue options in April 2017 and August 2023.

        <a
          aria-label="Learn more about Product and Issue changes (opens in new window)"
          href="https://www.consumerfinance.gov/data-research/consumer-complaints/#past-changes"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn More
        </a>
      </p>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-from"
          >
            From
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input a-text-input__error"
              id="date_received-from"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2016-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received from filter
              </span>
            </button>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-through"
          >
            Through
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input a-text-input__error"
              id="date_received-through"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2000-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received through filter
              </span>
            </button>
          </div>
        </li>
      </ul>
      <section
        className="date-ranges m-btn-group"
      >
        <p>
          Date range (Click to modify range)
        </p>
        <button
          className="a-btn date-selector range-3m"
          onClick={[Function]}
        >
          3m
        </button>
        <button
          className="a-btn date-selector range-6m"
          onClick={[Function]}
        >
          6m
        </button>
        <button
          className="a-btn date-selector range-1y"
          onClick={[Function]}
        >
          1y
        </button>
        <button
          className="a-btn date-selector range-3y"
          onClick={[Function]}
        >
          3y
        </button>
        <button
          className="a-btn date-selector range-all"
          onClick={[Function]}
        >
          All
        </button>
      </section>
      <div
        className="a-form-alert a-form-alert__error"
        role="alert"
      >
        <span
          aria-hidden="true"
        >
          <svg
            className="cf-icon-svg cf-icon-delete-round"
          >
            error-round.svg
          </svg>
        </span>
        <span
          className="a-form-alert_text"
        >
          'From' date must be less than 'through' date
        </span>
      </div>
    </div>
  </div>
</section>
`;

exports[`component::DateFilter snapshot supports no dates in the Redux Store 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-expanded="true"
    aria-label="Hide Date CFPB received the complaint filter"
    className="o-expandable_header"
    onClick={[Function]}
  >
    <h3
      className="o-expandable_label"
    >
      Date CFPB received the complaint
    </h3>
    <span
      className="o-expandable_cues"
    >
      <span
        aria-label="Hide"
        className="o-expandable_cue-close"
        role="img"
      >
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p />
    <div>
      <p
        className="u-mt15"
      >

        CFPB updated product and issue options in April 2017 and August 2023.

        <a
          aria-label="Learn more about Product and Issue changes (opens in new window)"
          href="https://www.consumerfinance.gov/data-research/consumer-complaints/#past-changes"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn More
        </a>
      </p>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-from"
          >
            From
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="date_received-from"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="Invalid Date"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received from filter
              </span>
            </button>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="date_received-through"
          >
            Through
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="date_received-through"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="Invalid Date"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear date received through filter
              </span>
            </button>
          </div>
        </li>
      </ul>
      <section
        className="date-ranges m-btn-group"
      >
        <p>
          Date range (Click to modify range)
        </p>
        <button
          className="a-btn date-selector range-3m"
          onClick={[Function]}
        >
          3m
        </button>
        <button
          className="a-btn date-selector range-6m"
          onClick={[Function]}
        >
          6m
        </button>
        <button
          className="a-btn date-selector range-1y"
          onClick={[Function]}
        >
          1y
        </button>
        <button
          className="a-btn date-selector range-3y"
          onClick={[Function]}
        >
          3y
        </button>
        <button
          className="a-btn date-selector range-all"
          onClick={[Function]}
        >
          All
        </button>
      </section>
    </div>
  </div>
</section>
`;
